fix: add ability to retrieve more than 100 records at the time from airtable api (#64)
* fix: json/read-value call

* Removes .iml file from gitignore, modifies fetch-airtable-records to handle airtables pagination of records

* Adds dump.rdb to gitignore

* Corrects typo in gitignore, fixes recursive function to concatenate the correct keys in order to get all data

* fix: adds necessary workaround for ppl with newer java versions